--- a/index.html
+++ b/index.html
@@ -8,38 +8,30 @@
     <title>Calculator</title>
 </head>
 <body>
-
-
-
-
-<section class="wrapper">
     <section class="calculator-grid">
-        <div data-previous-operand class="previous-operand"></div>
-        <div data-current-opernad class="current-operand"></div>
-        <input class="display" type="text">
-<button id="operator">+</button>
-<button id="number">1</button>
-<button id="number">2</button>
-<button id="number">3</button>
-<button id="operator">-</button>
-<button id="number">4</button>
-<button id="number">5</button>
-<button id="number">6</button>
-<button id="operator">*</button>
-<button id="number">7</button>
-<button id="number">8</button>
-<button id="number">9</button>
-<button id="operator">/</button>
-<button id="dot">.</button>
-<button id="number" class="span-two">0</button>
-<button id="all clear" class="span-two">AC</button>
-<button id="equal" class="span-two">=</button>
+        <div class="output">
+            <div data-previous-opp class="previous-opp"></div>
+            <div data-current-opp class="current-opp"></div>
+        </div>
+        <button data-allClear class="span-two">AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>/</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button data-equal class="span-two">=</button>
+
     </section>
-
-
-
-
-</section>
-   
 </body>
 </html>
